--- a/RestAssured/test-output/old/Default suite/methods.html
+++ b/RestAssured/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6abc94">  <td>26/02/03 19:21:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GraphQL_QueryTests.testFetchPublicTodos()[pri:5, instance:Dayy11.GraphQL_QueryTests@1f0f1111]">testFetchPublicTodos</td> 
+<tr bgcolor="7c7bf6">  <td>26/02/04 10:53:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterDemo.queryParamm()[pri:0, instance:Day2.ParameterDemo@4313f5bc]">queryParamm</td> 
+  <td>main@724542711</td>   <td></td> </tr>
+<tr bgcolor="7c7bf6">  <td>26/02/04 10:53:45</td>   <td>-1580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterDemo.pathParam()[pri:0, instance:Day2.ParameterDemo@4313f5bc]">pathParam</td> 
   <td>main@724542711</td>   <td></td> </tr>
 </table>
