--- a/RestAssured/test-output/old/Default suite/methods.html
+++ b/RestAssured/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c7bf6">  <td>26/02/07 12:41:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpMethodDemo.getMethod()[pri:0, instance:Day1.HttpMethodDemo@161479c6]">getMethod</td> 
+<tr bgcolor="7c7bf6">  <td>26/02/11 00:17:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpMethodDemo.putMethod()[pri:3, instance:Day1.HttpMethodDemo@1e802ef9]">putMethod</td> 
+  <td>main@724542711</td>   <td></td> </tr>
+<tr bgcolor="7c7bf6">  <td>26/02/11 00:17:38</td>   <td>799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpMethodDemo.deleteMethod()[pri:4, instance:Day1.HttpMethodDemo@1e802ef9]">deleteMethod</td> 
+  <td>main@724542711</td>   <td></td> </tr>
+<tr bgcolor="7c7bf6">  <td>26/02/11 00:17:36</td>   <td>-858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpMethodDemo.postMethod()[pri:2, instance:Day1.HttpMethodDemo@1e802ef9]">postMethod</td> 
+  <td>main@724542711</td>   <td></td> </tr>
+<tr bgcolor="7c7bf6">  <td>26/02/11 00:17:35</td>   <td>-1634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpMethodDemo.getMethod()[pri:0, instance:Day1.HttpMethodDemo@1e802ef9]">getMethod</td> 
   <td>main@724542711</td>   <td></td> </tr>
 </table>
